--- a/budowanie-programow/README
+++ b/budowanie-programow/README
@@ -2,3 +2,4 @@
 2. Tak, jest konieczne istnienie pliku biblioteka.c ponieważ inaczej wywali błąd związany z referencją do procedury hej.
 3. Dodanie pliku definicje.h nie zmienia komunikatów kompilatora.
 4. Wydając polecenie $gcc -o program glowny.o biblioteka.o kompilator łączy pliki w 1 plik wykonywalny o nazwie program. Źródła nie są potrzebne do łączenia plików .o .
+5. Zadanie znajdują się w plikach : zadanie5a.c, zadanie5b.c .
