--- a/budowanie-programow/README
+++ b/budowanie-programow/README
@@ -5,4 +5,5 @@
 5. Zadanie znajdują się w plikach : zadanie5a.c, zadanie5b.c .
 6. Zadanie 6 znajduje się w pliku zadanie6.c .
 7. Zadanie 7 znajduje się w pliku zadanie7.c .
+8. Zadanie 8 znajduje się w pliku zadanie8.c .
 
