To już koniec na dziś.

--- a/budowanie-programow/README
+++ b/budowanie-programow/README
@@ -6,4 +6,4 @@
 6. Zadanie 6 znajduje się w pliku zadanie6.c .
 7. Zadanie 7 znajduje się w pliku zadanie7.c .
 8. Zadanie 8 znajduje się w pliku zadanie8.c .
-
+9. Zadanie 9 znajduje się w pliku zadanie9.c .
