--- a/podstawowe-typy-danych/README
+++ b/podstawowe-typy-danych/README
@@ -1,2 +1,3 @@
 
-2. Zadanie znajduje się w pliku zadanie2.c
+2. Zadanie 2 znajduje się w pliku zadanie2.c .
+3. Zadanie 3 znajduję się w pliku zadanie3.c .
