--- a/podstawowe-typy-danych/README
+++ b/podstawowe-typy-danych/README
@@ -1,3 +1,5 @@
 
 2. Zadanie 2 znajduje się w pliku zadanie2.c .
-3. Zadanie 3 znajduję się w pliku zadanie3.c .
+3. Zadanie 3 znajduje się w pliku zadanie3.c .
+4. Zadanie jest nieukończone.
+5. Zadanie 5 znajduje się w pliku zadanie5.c .
