--- a/budowanie-programow/README
+++ b/budowanie-programow/README
@@ -1,6 +1,6 @@
 1. Powstaną pliki z rozszerzeniem .o .
-2. Tak, jest konieczne istnienie pliku biblioteka.c ponieważ inaczej wywali błąd związany z referencją do procedury hej.
-3. Dodanie pliku definicje.h nie zmienia komunikatów kompilatora.
+2. Nie jest potrzebne istnienie pliku biblioteka.c .
+3. Nie ma żadnych komunikatów typu warning.
 4. Wydając polecenie $gcc -o program glowny.o biblioteka.o kompilator łączy pliki w 1 plik wykonywalny o nazwie program. Źródła nie są potrzebne do łączenia plików .o .
 5. Zadanie znajdują się w plikach : zadanie5a.c, zadanie5b.c .
 6. Zadanie 6 znajduje się w pliku zadanie6.c .
